# DiplomaMaster

./: CMakeLists.txt  main.cpp
modules/app/: CmakeLists.txt
modules/app/include/: MainWindow.h  Utils.h
modules/app/src/: MainWindow.cpp  Utils.cpp  main.cpp  pch.h
modules/recognitionlib/: CMakeLists.txt
modules/recognitionlib/include/recognitionLib/: AlgorithCreator.h  Goturn.h  NeroAlgorithm.h  Rcnn.h  RecognitionLib.h  SelectiveSearch.h  Types.h  Yolo3.h
modules/recognitionlib/src/: AlgorithCreator.cpp  Goturn.cpp  Rcnn.cpp  SelectiveSearch.cpp  Yolo3.cpp  pch.h
modules/sandbox/: CmakeLists.txt
modules/sandbox/include/: MainWindow.h
modules/sandbox/src/: MainWindow.cpp  main.cpp  pch.h
scripts/: build-msvc14-x64.cmd  cmakegen-msvc14-x64.cmd
